Portfolio & Building Page Padding and Content Alignment fixes added.

--- a/src/assets/scss/custom/structure/_header.scss
+++ b/src/assets/scss/custom/structure/_header.scss
@@ -9,7 +9,6 @@
     font-size: 1.5rem;
     line-height: 125%;
     color: #1d2939;
-    margin-left: 0.750rem;
 }
 
 .header-datefilter-datepicker {
